--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>My First Bitstarter</title>
+    <title>By Kevin Wright</title>
     <link type="text/css" rel="stylesheet" 
           href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-2.3.2.css">
     <style type="text/css">
@@ -53,12 +53,12 @@
       </div>
       <div class="row heading">
         <div class="span12">
-          <h1>Bitstarter Title</h1>
+          <h1>Pension Consulting Services</h1>
         </div>
       </div> 
      <div class="row subheading">
         <div class="span12">
-          <p class="lead">This is my first bitstarter project.</p>
+          <p class="lead">By Kevin Wright</p>
         </div>
       </div>
       <div class="row pitch">
@@ -66,25 +66,25 @@
           Video
         </div>
         <div class="span6">
-          <div class="thermometer">
+          <div class="Frozen Pension Solutions">
             Thermometer
           </div>
-          <div class="order">
+          <div class="Administration Services">
             Order
           </div>
-          <div class="social">
+          <div class="Complete Outsourcing">
             Social
           </div>
         </div>
       </div>
       <div class="row section1">
         <div class="span12">
-          Marketing Section 1
+          Lots of Experience - Resume
         </div>
       </div>
       <div class="row section2">
         <div class="span12">
-          Marketing Section 2
+          Customized Solutions & Professional Services
         </div>
       </div>
       <div class="row faq">
@@ -94,7 +94,7 @@
       </div>
       <div class="row footer">
         <div class="span12">
-          Footer
+          Contact me at kevbob21@gmail.com
         </div>
       </div>
     </div>
