fixed bootstrap code, edit3: comment typo

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 	    <li><a href="#about">About</a></li>
 	    <li><a href="#contact">Contact</a></li>
 	    </ul>
-	  </div><!00/.nav-collapse -->
+	  </div><!--/.nav-collapse -->
 	</div>
        </div>
       </div>
