--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>My First Bitstarter</title>
+    <title>Budget Remedy</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-combined.no-icons.min.css">
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css">
@@ -16,7 +16,7 @@
   /* Large desktop */
   @media (min-width: 980px) {
     body {
-     padding-top: 60px:
+   padding-top: 60px;
     }
     .linediv-l {
       border-right: 1px white solid;
@@ -29,7 +29,7 @@
   /* Landscape phones and down */
   @media (max-width: 480px) {
    .copy {
-     padding: 2.5% 20%;
+     padding: 2.5% 10%;
    }
   .linediv-l {
     border-bottom: 1px white solid;
@@ -111,7 +111,7 @@
 	  <span class="icon-bar"></span>
 	  <span class="icon-bar"></span>
 	  </button>
-	<a class="brand" href="#">Bitstarter</a>
+	<a class="brand" href="#"Bitstarter</a>
 	<div class="nav-collapse collapse">
 	  <ul class="nav">
 	    <li class="active"><a href="#">Home</a></li>
@@ -132,19 +132,19 @@
     <!-- www.google.com/fonts/specimen/Ubuntu#pairings -->
       <div class="row-fluid heading">
         <div class="span12">
-          <h1>Product</h1>
+          <h1>Budget Remedy</h1>
         </div>
       </div>
       <div class="row-fluid subheading">
         <div class="span12">
           <!-- Special typography from Bootstrap for lead paragraph. -->
 	  <!-- http://twitter.github.io/bootstrap/base-css.html#typography -->
-	  <p class="lead">One sentence description.</p>
+	  <p class="lead">Your Money. Your Time.</p>
         </div>
       </div>
       <div class="row-fluid pitch">
 	<div class="span5 offset1 video">
-	    <img class="img-polaroid" src="http://placehold.it/480x300">
+	  <a href="http://imgur.com/5h9whNv"><img src="http://i.imgur.com/5h9whNv.jpg" title="Hosted by imgur.com" /></a>
 	</div>
        
 	<!-- We define a new 'actions' div to contain statistics, order and share buttons. -->
@@ -197,11 +197,11 @@
 <!-- http://placehold.it -->
       <div class="row fluid section1">
         <div class="span5 offset1 asset">
-         <img class="img-polaroid" src="http://placehold.it/480x300">
-        </div>
+	  <a href="http://imgur.com/pWCtWeL"><img src="http://i.imgur.com/pWCtWeL.jpg" title="Hosted by imgur.com" /></a>
+	</div>
       <div class="span5 copy">
 	<p>
-	  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etc.
+	 <b>Eliminates unnecessary record-keeping.</b> You won't have to track a single expense. Simply plan your budget once, enter the value of your checking account monthly, and spend your money. Budget Remedy uses your account snapshots to intelligently adjust your budget and keep you on track.
 	</p>
         </div>
       </div>
@@ -209,12 +209,12 @@
       <div class="row-fluid section2">
         <div class="span5 offset1 copy copy-right">
 	  <p>
-	    Lorem ipsum dolor sit amet, consectetur adipiscing elig. Etc.
+	   <b>A self-adjusting budget.</b> It automatically adjusts your allowance until your short-term savings level is adequate. It constantly monitors your balance and doesn't let you get behind. If you start to, it takes money away from future allowances. If you do well, it rewards you by increasing your allowance.
 	  </p>
         </div>
       
       <div class="span5 asset">
-        <img class="img-polaroid" src="http://placehold.it/480x300">
+	<a href="http://imgur.com/KeKy421"><img src="http://i.imgur.com/KeKy421.jpg" title="Hosted by imgur.com"/></a>
       </div>
      </div>
 
