--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
     padding-top: 2.5%;
     padding-bottom: 2.5%;
     text-align: justify;
+<!-- vertical-align: middle; -->
   }
   .asset {
     padding: 2.5% 0%;
@@ -111,7 +112,8 @@
 	  <span class="icon-bar"></span>
 	  <span class="icon-bar"></span>
 	  </button>
-	<a class="brand" href="#"Bitstarter</a>
+<!--	<a href="http://imgur.com/CylZpyP"><img src="http://i.imgur.com/CylZpyP.jpg" title="Hosted by imgur.com" /></a> -->
+	<!-- <a class="brand" href="#"Bitstarter</a> -->
 	<div class="nav-collapse collapse">
 	  <ul class="nav">
 	    <li class="active"><a href="#">Home</a></li>
@@ -228,25 +230,29 @@
       <div class="accordion-group">
 	<a class="accordion-toggle" data-toggle="collapse"
 	     data-parent="#accordion2" href="#collapseOne">
-	  What does FAQ stand for?
+	  Sum it up
 	</a>
       </div>
       <div id="collapseOne" class="accordion-body collapse">
 	<div class="accordion-inner">
-	  Frequently Asked Question.
-	  </div>
+	  There are 4 components to a successful budget:
+	  <ul><b>Income</b> - What you earn</ul>
+	  <ul><b>Expenses</b> - Your planned expenses</ul>
+	  <ul><b>Allowance</b> - Your unplanned or discretionary expenses</ul>
+	  <ul><b>Savings</b> - What you set aside</ul>
 	</div>
       </div>
+    </div>
     <div class="accordion-group">
       <div class "accordion-heading">
 	<a class="accordion-toggle" data-toggle="collapse"
 	   data-parent="#accordion2" href="#collapseTwo">
-	  What's a Frequently Asked Question?
+	  Do I have to love budgeting?
 	  </a>
 	</div>
       <div id="collapseTwo" class="accordion-body collapse">
 	<div class="accordion-inner">
-	  A question which is commonly asked by uers.
+	  Absolutely not! Let Budget Remedy do the work for you.
 	  </div>
 	</div>
       </div>
